[tool.poetry]
name = "phase-1"
version = "0.0.1"
description = "A practice project for creating FastAPI based application."
authors = ["Hardik Wakodikar"]
license = "Practice License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
SQLAlchemy = "^2.0.36"
pydantic = "^2.10.1"
fastapi-pagination = "^0.12.32"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
